z-index fixes

--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -1366,7 +1366,7 @@ a.btn-action
 	left: 0
 	right: 0
 	background: rgba(255, 255, 255, .8)
-	z-index: 2
+	z-index: 3
 	display: none
 	&.is-active
 		display: block 
