--- a/sass/_inner.sass
+++ b/sass/_inner.sass
@@ -1,5 +1,6 @@
 .page-head
 	position: relative
+	z-index: 4 
 	+text-overflow
 	.page-head__title
 		font-size: 60px 
